# plutus-pairtrading

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  try_me.ipynb
.github/workflows/: bandit.yml  changelog.yml  codeql.yml  publish-material-docs.yml  publish-pypi.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
SECURITY/: index.html
SUPPORT/: index.html
demo/: index.html
docs/: CONTRIBUTING.md  LICENSE.md  SECURITY.md  SUPPORT.md  demo.md  index.md  installation.md
installation/: index.html
plutus_pairtrading/data_acquisitions/: data_acquisition.py
plutus_pairtrading/data_generations/: data_generation.py
plutus_pairtrading/data_visualizations/: plots.py
plutus_pairtrading/tests/: cointegration_tests.py  stationarity_tests.py  test_cointegration_tests.py  test_data_generation.py
search/: search_index.json
tests/: test_data_acquisition.py  test_stationarity_tests.py
