[tool.poetry]
name = "plutus-pairtrading"
version = "0.1.0"
description = ""
authors = ["FOX Techniques <info@fox-techniques.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
matplotlib = "^3.9.3"
yfinance = "^0.2.50"
tox = "^4.23.2"
arch = "^7.2.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
